<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvAuthorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_author"
        android:paddingTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvReviewContent"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    <TextView
        android:id="@+id/tvAuthorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/review_author_name"
        app:layout_constraintLeft_toRightOf="@id/tvAuthorLabel"
        app:layout_constraintBaseline_toBaselineOf="@id/tvAuthorLabel"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvReviewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/review_content"
        app:layout_constraintLeft_toLeftOf="@id/tvAuthorLabel"
        app:layout_constraintTop_toBottomOf="@id/tvAuthorLabel"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"/>

    <View
        android:id="@+id/view_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/tvReviewContent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:background="#dadada" />

</android.support.constraint.ConstraintLayout>
