<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MovieDetailActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@android:color/white" />

        <ImageView
            android:id="@+id/ivHeader"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/movie_title_content_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/tvMovieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_large"
            android:paddingEnd="@dimen/activity_horizontal_margin_medium"
            android:paddingRight="@dimen/activity_horizontal_margin_medium"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_medium"
            android:layout_marginRight="@dimen/activity_horizontal_margin_medium"
            android:ellipsize="end"
            android:maxLines="3"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:text="Movie Title"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/ivMoviePoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/placeholer"
            android:layout_marginTop="@dimen/activity_vertical_margin_medium"
            android:contentDescription="@string/movie_poster_placeholder"
            app:layout_constraintLeft_toLeftOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivHeader" />

        <TextView
            android:id="@+id/tvMovieReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin_large"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_large"
            android:layout_marginTop="@dimen/activity_vertical_margin_large"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/ivMoviePoster"
            app:layout_constraintTop_toBottomOf="@+id/ivHeader"
            tools:text="2019-01-01"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvMovieVoteAverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_medium"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_large"
            android:layout_marginRight="@dimen/activity_horizontal_margin_large"
            android:visibility="invisible"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="@+id/tvMovieReleaseDate"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieReleaseDate"
            tools:visibility="visible"
            tools:text="4.5"/>

        <Button
            android:id="@+id/btFavorite"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_medium"
            android:background="@color/colorFavoriteButton"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/button_favorite_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintLeft_toLeftOf="@id/tvMovieVoteAverage"
            app:layout_constraintTop_toBottomOf="@id/tvMovieVoteAverage"/>

        <TextView
            android:id="@+id/tvMovieOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_medium"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="@id/guideline3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivMoviePoster"
            tools:text="@tools:sample/lorem/random"
            tools:visibility="visible" />


        <TextView
            android:id="@+id/tvNoNetworkMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/no_network_message"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/tvMovieOverview"
            app:layout_constraintLeft_toLeftOf="@id/guideline3"/>

        <include
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lMovieTrailer"
            layout="@layout/trailers"
            app:layout_constraintLeft_toLeftOf="@id/guideline3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMovieOverview"
            android:layout_marginTop="@dimen/activity_vertical_margin_medium"/>

        <include
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lMovieReview"
            layout="@layout/reviews"
            app:layout_constraintLeft_toLeftOf="@id/guideline3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lMovieTrailer"
            android:layout_marginTop="@dimen/activity_vertical_margin_medium"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="0dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="16dp"
            app:layout_constraintHorizontal_bias="0.37"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>
